fixed overflow?

--- a/style.css
+++ b/style.css
@@ -835,7 +835,7 @@ button:focus {
         top: 0;
         /* right: 0; */
         width: 100%;
-        height: 100%;
+        height: 200px;
         opacity: 0;
         visibility: hidden;
         transition: opacity .35s, visibility .35s, height .35s;
@@ -846,7 +846,7 @@ button:focus {
     #hamburger-menu {
         position: fixed;
         top: 10px;
-        right: 100px;
+        left: calc(100vw - 50px);
         width: 50px;
         height: 50px;
         padding: 0;
